<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playerlist_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/playerlist_playerlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:background="@drawable/playerlist_btn1" />

        <ImageButton
            android:id="@+id/playerlist_friendlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/playerlist_friend_btn_press" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="332dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/title_player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_player_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/title_player_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/title_player_rank"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/title_player_mani"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_player_mani"
                    android:textSize="25sp" />
            </LinearLayout>

            <!-- add a ListView widget -->

            <ListView
                android:id="@+id/playerollist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="30dp" >

            <ImageButton
                android:id="@+id/playerlist_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:background="@drawable/playerlist_refresh_btn_press" />

            <ImageButton
                android:id="@+id/playerlist_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/playerlist_return_btn_press" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>